<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@android:color/holo_red_dark"
            android:text="@string/del"
            android:textColor="#FAFAFA"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttoneql"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/design_default_color_error"
            android:text="@string/answer"
            android:textColor="#FAFAFA"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_1"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_2"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_3"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/biv"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@android:color/holo_green_light"
            android:text="@string/divi"
            android:textColor="#fffdfe"
            android:textSize="50sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_4"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_5"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_6"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/bsub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@android:color/holo_green_light"
            android:text="@string/minus"
            android:textColor="#fffdfe"
            android:textSize="60sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_7"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_8"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_9"
            android:textColor="#fffdfe"
            android:textSize="36sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bmul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@android:color/holo_green_light"
            android:text="@string/multi"
            android:textColor="#fffdfe"
            android:textSize="50sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bDot"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/dot"
            android:textColor="#fffdfe"
            android:textSize="50sp" />

        <Button
            android:id="@+id/b0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_700"
            android:text="@string/_0"
            android:textColor="#fffdfe"
            android:textSize="36sp" />

        <Button
            android:id="@+id/BRemain"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@android:color/holo_green_light"
            android:text="@string/modulodiv"
            android:textColor="#fffdfe"
            android:textSize="36sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/badd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@android:color/holo_green_light"
            android:onClick="onClick"
            android:text="@string/addition"
            android:textColor="#fffdfe"
            android:textSize="50sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</LinearLayout>